# frequenz-cs-reporting

./: .cookiecutter-replay.json  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  app.py  mkdocs.yml  noxfile.py  pyproject.toml  versions.json
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/containers/nox-cross-arch/: arm64-ubuntu-20.04-python-3.11.Dockerfile  entrypoint.bash
.github/containers/test-installation/: Dockerfile
.github/workflows/: auto-dependabot.yaml  ci-pr.yaml  ci.yaml
.streamlit/: config.toml
docs/_scripts/: mkdocstrings_autoapi.py
src/frequenz/cs_reporting/: __init__.py  constants.py
src/frequenz/cs_reporting/app_pages/: dashboard.py  home.py  solar.py
src/frequenz/cs_reporting/assets/: __init__.py
src/frequenz/cs_reporting/components/: inputs.py  plot_charts.py  sidebar_inputs.py  tables.py
src/frequenz/cs_reporting/rep_cs_core/: __init__.py  config.py
src/frequenz/cs_reporting/services/: __init__.py  client_factory.py  data_service.py
src/frequenz/cs_reporting/utils/: __init__.py  env.py
src/frequenz/cs_reporting/views/: dashboard.py  metric_renderers.py  plot_renderers.py  sections.py  table_renderers.py
src/frequenz/frequenz_cs_reporting/: __init__.py  conftest.py
src/frequenz/frequenz_cs_reporting/app_pages/: __init__.py  dashboard.py  home.py  solar.py
src/frequenz/frequenz_cs_reporting/components/: __init__.py  sidebar_inputs.py  ui.py
src/frequenz/frequenz_cs_reporting/rep_cs_core/: config.py  page_spec.py
src/frequenz/frequenz_cs_reporting/services/: client_factory.py  data_service.py
src/frequenz/frequenz_cs_reporting/utils/: time.py
src/frequenz/frequenz_cs_reporting/views/: __init__.py  dashboard.py  metric_renderers.py  plot_renderers.py  sections.py  table_renderers.py
tests/: test_frequenz_cs_reporting.py
toml_directory/: __init__.py
v0.0/: 404.html  index.html  objects.inv
v0.0/CONTRIBUTING/: index.html
v0.0/SUMMARY/: index.html
v0.0/reference/SUMMARY/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/app_pages/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/app_pages/dashboard/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/app_pages/home/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/app_pages/solar/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/assets/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/components/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/components/inputs/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/components/plot_charts/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/components/sidebar_inputs/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/components/tables/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/components/ui/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/constants/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/rep_cs_core/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/rep_cs_core/config/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/rep_cs_core/page_spec/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/services/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/services/client_factory/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/services/data_service/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/utils/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/utils/env/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/utils/time/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/views/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/views/dashboard/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/views/metric_renderers/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/views/plot_renderers/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/views/sections/: index.html
v0.0/reference/frequenz/frequenz_cs_reporting/views/table_renderers/: index.html
v0.0/search/: search_index.json
v0.1/: 404.html  index.html  objects.inv
v0.1/CONTRIBUTING/: index.html
v0.1/SUMMARY/: index.html
v0.1/reference/SUMMARY/: index.html
v0.1/reference/frequenz/cs_reporting/: index.html
v0.1/reference/frequenz/cs_reporting/app_pages/: index.html
v0.1/reference/frequenz/cs_reporting/app_pages/dashboard/: index.html
v0.1/reference/frequenz/cs_reporting/app_pages/home/: index.html
v0.1/reference/frequenz/cs_reporting/app_pages/reporting/: index.html
v0.1/reference/frequenz/cs_reporting/app_pages/solar/: index.html
v0.1/reference/frequenz/cs_reporting/assets/: index.html
v0.1/reference/frequenz/cs_reporting/components/: index.html
v0.1/reference/frequenz/cs_reporting/components/inputs/: index.html
v0.1/reference/frequenz/cs_reporting/components/plot_charts/: index.html
v0.1/reference/frequenz/cs_reporting/components/sidebar_inputs/: index.html
v0.1/reference/frequenz/cs_reporting/components/tables/: index.html
v0.1/reference/frequenz/cs_reporting/components/ui/: index.html
v0.1/reference/frequenz/cs_reporting/constants/: index.html
v0.1/reference/frequenz/cs_reporting/rep_cs_core/: index.html
v0.1/reference/frequenz/cs_reporting/rep_cs_core/config/: index.html
v0.1/reference/frequenz/cs_reporting/rep_cs_core/page_spec/: index.html
v0.1/reference/frequenz/cs_reporting/services/: index.html
v0.1/reference/frequenz/cs_reporting/services/client_factory/: index.html
v0.1/reference/frequenz/cs_reporting/services/data_service/: index.html
v0.1/reference/frequenz/cs_reporting/utils/: index.html
v0.1/reference/frequenz/cs_reporting/utils/env/: index.html
v0.1/reference/frequenz/cs_reporting/utils/time/: index.html
v0.1/reference/frequenz/cs_reporting/views/: index.html
v0.1/reference/frequenz/cs_reporting/views/dashboard/: index.html
v0.1/search/: search_index.json
(+4 files in other folders)
